@@ -4,6 +4,14 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/09/12
+	* Modified the login SQL server so that case insensitive lookups use "where
+	  name = BINARY 'name'" instead of "where BINARY name = 'name'", since this
+	  way the name index should be used, and performance will no longer be
+	  heavily affected. [Skotlex]
+	* Modified main.sql to add 4 missing indexes (thanks to ErkDog): char_id on
+	  the tables memo/friends, and online/name on the char table. Added
+	  upgrade_svn8728.sql to add these indexes to already existing tables.
+	  [Skotlex]
 	* Updated convert_engine.sql to use TYPE instead of ENGINE to be compatible
 	  with Mysql 4 installations. [Skotlex]
 	* Moved the morph restrictions from skill_additional_effect to
